Issue #4387: binascii now refuses to accept str as binary input.